<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/conner_view"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_view_to_view_largest">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/txt_continue_create_dinote"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_and_answer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_to_view_largest"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue_create_dinote_cancel"
                style="@style/twoButton"
                android:background="@drawable/coner_view_button_cancel"
                android:text="@string/txt_continue"
                android:textColor="@color/text_color_exit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue_create_dinote_clear"
                style="@style/twoButton"
                android:layout_marginStart="@dimen/margin_start"
                android:background="@drawable/coner_view_button_continues"
                android:text="@string/txt_delete"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>

