<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/conner_view"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_view_to_view_small">

        <TextView
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/continues_dinote_title" />

        <TextView
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/question_and_answer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_to_view_small"
            android:orientation="horizontal"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dialog_dinote_exit"
                style="@style/twoButton"
                android:background="@drawable/coner_view_button_cancel"
                android:text="@string/text_exit"
                android:textColor="@color/text_color_exit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dialog_dinote_continue"
                style="@style/twoButton"
                android:background="@drawable/coner_view_button_continues"
                android:text="@string/txt_continue"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>