<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imv_complete_dialog"
            android:layout_marginTop="-30dp"
            android:background="@drawable/conner_view"
            android:padding="@dimen/margin_view_to_view_big"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_start"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_success"
                    android:textColor="@color/text_color" />

                <TextView
                    android:textColor="@color/text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_view_to_view_small"
                    android:text="@string/good_jod" />

                <TextView
                    android:textColor="@color/text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_success" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_view_to_view_medium"
                    android:layout_marginEnd="@dimen/margin_start"
                    android:layout_marginBottom="@dimen/margin_child_to_child"
                    android:background="@drawable/conner_view_button_continues"
                    android:text="@string/yes"
                    android:textColor="@color/white" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imv_complete_dialog"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_save_complete" />
    </RelativeLayout>


</layout>