<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/lnl_option"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin_child_to_child"
            android:layout_marginEnd="@dimen/margin_child_to_child"
            android:paddingTop="@dimen/margin_view_to_view_small">

            <ImageView
                android:id="@+id/imv_remind_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/tv_remind_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/text_remind"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lnl_remind_time_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnl_option"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_view_to_view_big"
            android:layout_marginEnd="@dimen/margin_start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_textview"
                android:text="@string/time_remind_default"
                android:textColor="@color/text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_to_view_small"
                android:padding="@dimen/padding_textview"
                android:text="@string/hit_remind_default"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_text_color" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_remind_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnl_remind_time_select"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_view_to_view_small"
            android:padding="@dimen/padding_text"
            android:text="@string/add_remind"
            android:textColor="@color/text_color"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_remind_list_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_remind"
            android:layout_below="@+id/tv_remind_list_title"
            android:layout_marginStart="@dimen/margin_view_to_view_medium"
            android:layout_marginTop="@dimen/margin_view_to_view_medium"
            android:layout_marginEnd="@dimen/margin_view_to_view_medium"
            android:layout_marginBottom="@dimen/margin_view_to_view_largest" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_child_to_child"
            android:background="@drawable/coner_view_bule"
            android:text="@string/add_time_remind"
            android:textColor="@color/white" />
    </RelativeLayout>
</layout>