<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:background="@drawable/conner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivm_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_child_to_child"
            android:src="@drawable/imv_exit_app" />

        <TextView
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_to_view_small"
            android:gravity="center"
            android:text="@string/text_commit_exit_app"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_to_view_small"
            android:gravity="center"
            android:text="@string/text_exit_app" />

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_start"
            android:paddingEnd="@dimen/margin_start"
            android:paddingTop="@dimen/margin_view_to_view_small"
            android:paddingBottom="@dimen/margin_view_to_view_small"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_exit_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/coner_view_button_continues"
                android:text="Tiếp tục"
                android:layout_marginEnd="@dimen/margin_view_to_view_small"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_exit_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/coner_view_button_cancel"
                android:text="@string/text_exit"
                android:textColor="@color/purple_500" />

        </LinearLayout>

    </LinearLayout>

</layout>