<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_view_to_view_small"
        android:paddingEnd="@dimen/margin_view_to_view_small"
        tools:context=".views.fragments.SearchFragment">

        <RelativeLayout
            android:id="@+id/lnl_search_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_to_view_big"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imv_search_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_cancel" />

            <EditText
                android:id="@+id/edit_search_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/imv_search_show"
                android:layout_toEndOf="@+id/imv_search_cancel"
                android:background="@android:color/transparent"
                android:hint="@string/txt_search"
                android:paddingStart="@dimen/margin_start"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_text_color" />

            <ImageView
                android:id="@+id/imv_search_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_search" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlt_search_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_view_medium"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/lnl_search_action">

            <TextView
                android:id="@+id/tv_search_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_history_search"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_search_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/delete_history"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_search_history"
                android:layout_marginTop="@dimen/margin_view_to_view_big" />


            <TextView
                android:id="@+id/tv_search_tag_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_search_show_more"
                android:layout_marginTop="@dimen/margin_view_to_view_small"
                android:text="@string/tag_hot"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_search_tag_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_search_tag_hot"
                android:layout_marginTop="@dimen/margin_view_to_view_big" />

            <TextView
                android:id="@+id/btn_search_show_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rcv_search_history"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_view_to_view_small"
                android:background="@drawable/conner_view"
                android:paddingStart="@dimen/padding_text"
                android:paddingEnd="@dimen/padding_text"
                android:text="@string/showmore"
                android:textColor="@color/text_color" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingBottom="@dimen/dimen_parent_to_parent"
            android:clipToPadding="true"
            android:id="@+id/rcv_search_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_title"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/lnl_search_action" />

        <LinearLayout
            android:id="@+id/lnl_search_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnl_search_action">

            <ImageView
                android:id="@+id/imv_search_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_box_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_to_view_small"
                android:text="@string/no_dinote"
                android:textColor="@color/text_color" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>